--- a/style.css
+++ b/style.css
@@ -69,6 +69,16 @@ body {
     cursor: pointer;
 }
 
+.padding{
+    background-color: #F0FFF0;
+    border-radius: 4px;
+}
+.padding:hover{
+    transform: scale(1.1);
+    box-shadow: 0px 0px 30px #ccc;
+    transition: .5s;
+}
+
 footer{
     background-color: rgba(48, 28, 77, 0.841);
    padding-bottom: 20px;;
